Chore: build.gradle test 경고문 제거용 코드 추가

--- a/build.gradle
+++ b/build.gradle
@@ -45,4 +45,8 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+    test {
+        jvmArgs += ["-javaagent:${classpath.find { it.name.contains('mockito-core') }.absolutePath}"]
+        jvmArgs '-Xshare:off'
+    }
 }
